autopkgtest (3.17.2) UNRELEASED; urgency=medium

  * ssh-setup/nova: Use instance UUIDs instead of names after initial "nova
    boot", to avoid name collisions. (LP: #1495788)
  * adt-setup-vm: Drop "pin eth0 name" hack, this was fixed properly in
    systemd 226-2.
  * adt-setup-vm: Generalize ethernet ifupdown setup for net.ifnames.

 -- Martin Pitt <mpitt@debian.org>  Tue, 15 Sep 2015 09:14:17 +0200

autopkgtest (3.17.1) unstable; urgency=medium

  * Add new private python modules to Makefile, to actually ship them.
  * tests/adt-run: Fix test regression when $ADT_TEST* are not set.

 -- Martin Pitt <mpitt@debian.org>  Tue, 15 Sep 2015 08:38:54 +0200

autopkgtest (3.17) unstable; urgency=medium

  * setup-commands/cloud-vm-setup: Provide fallback for Ubuntu 12.04 which
    does not yet have /etc/default/grub.cfg.d/.
  * adt-virt-ssh: Add --timeout-ssh option. Thanks Leo Arias for the initial
    patch. (LP: #1488358)
  * adt-run: Add --env option to pass arbitrary environment variables to the
    test.
  * adt-virt-lxc: In the auxverb, clean up leaked background processes which
    share the same stdout/stderr, to avoid eternal hangs. (LP: #1488359)
  * Move Testbed class and related logic into separate module
    lib/adt_testbed.py, and clean up some unnecessary code interdependencies
    and error handling. This will make it easier to write alternative CLI
    frontents. This also handles test timeouts in a better way: There now is a
    proper "summary" report as "FAIL timed out", and subsequent tests will now
    run. (Closes: #741322)
  * Drop the --leave-lang option. Please use the explicit option --set-lang
    instead, to avoid weakly defined behaviour.
  * Move Binaries class into separate module lib/adt_binaries.py.
  * Testbed.execute(): Explicitly decode output of programs as UTF-8, instead
    of relying on the host locale's encoding.
  * tools/adt-setup-vm: Only configure eth0 in ifupdown if it actually exists,