@@ -5,6 +5,7 @@ autopkgtest (3.17.2) UNRELEASED; urgency=medium
   * adt-setup-vm: Drop "pin eth0 name" hack, this was fixed properly in
     systemd 226-2.
   * adt-setup-vm: Generalize ethernet ifupdown setup for net.ifnames.
+  * adt_binaries.py: Fix resetting of testbed (regression in 3.17).
 
  -- Martin Pitt <mpitt@debian.org>  Tue, 15 Sep 2015 09:14:17 +0200
 
